# EasyTodo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: Attivita.cpp  Attivita.h  GestoreFile.cpp  GestoreFile.h  ListaAttivita.cpp  ListaAttivita.h  Logger.h  Observer.h  Subject.h  main.cpp
tests/: test_attivita.cpp  test_gestore_file.cpp  test_lista_attivita.cpp
